--- a/Bloggie.Web/appsettings.json
+++ b/Bloggie.Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BloggieDbConnectionString": "Server=localdb\\MSSQLLocalDB;Database=BloggieDb;Trusted_Connection=True;TrustServerCertificate=Yes"
+    "BloggieDbConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=BloggieDb;Trusted_Connection=True;TrustServerCertificate=Yes"
   }
 }
